--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,10 @@ steps:
 - bash: |
     echo '$(System.DefaultWorkingDirectory)'
     ls -la '$(System.DefaultWorkingDirectory)'
-- script: dir $(System.DefaultWorkingDirectory)
+    
 - task: Gradle@2
   inputs:
-    workingDirectory: 'pipelines-android'
+    workingDirectory: '$(System.DefaultWorkingDirectory)'
     gradleWrapperFile: 'gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
