--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ pool:
 steps:
 - task: JavaToolInstaller@0
   inputs:
-    versionSpec: '11'
+    versionSpec: "$javaVersionSpec"
     jdkArchitectureOption: 'x64'
     jdkSourceOption: 'PreInstalled'
     
