--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ pool:
 steps:
 - task: JavaToolInstaller@0
   inputs:
-    versionSpec: "$javaVersionSpec"
+    versionSpec: "11"
     jdkArchitectureOption: 'x64'
     jdkSourceOption: 'PreInstalled'
     
@@ -31,6 +31,7 @@ steps:
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     tasks: 'assembleDebug'
+    gradleVersion: '7.4.2'
   displayName: gradlew assembleDebug
 
 - task: CopyFiles@2
